--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 
 body {
     font-family: 'Poppins', sans-serif;
+    
+    margin: 0 auto;
 }
 
 
@@ -47,6 +49,7 @@ nav a {
 
 .banner-img {
     background-image: url("Images/Circle\ design.svg");
+    background-size: cover;
 }
 
 .banner-title {
@@ -63,14 +66,262 @@ nav a {
     font-size: 16px;
     font-weight: 600;
     margin-bottom: 16px;
- }
- .btn-primary{
+}
+
+.btn-primary {
     border-radius: 41px;
     background: #E02C6D;
     padding: 10px 24px;
     color: #fff;
     border: none;
- }
- .fa-solid{
+}
+
+.fa-solid {
     margin-left: 5px;
- }
+}
+
+/*-------sponsor styles------*/
+.sponsor {
+    margin-top: 69px;
+}
+
+.sponsor-container {
+    display: flex;
+    gap: 60px;
+    justify-content: center;
+    padding: 35px 0;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
+}
+
+
+
+/*----------popular products-----------*/
+.popular-products {
+    padding: 0 196px;
+    max-width: 1440px;
+    margin: 0 auto;
+
+}
+
+.popular-title {
+    text-align: center;
+    margin: 100px 0 30px 0;
+    color: #3A3A3A;
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 70px;
+
+}
+
+.checked {
+    color: orange;
+}
+
+.card {
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    width: 329px;
+}
+
+.card-img {
+    padding: 0 15px;
+}
+
+.card-content {
+    padding-left: 15px;
+}
+
+.card-title {
+    color: #18191F;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 40px;
+    margin-top: 16px;
+}
+
+.card-price {
+    color: rgba(0, 0, 0, 0.87);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 150%;
+    margin-top: 6px;
+    margin-bottom: 10px;
+}
+
+.card-description {
+    color: #787885;
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 143%;
+    letter-spacing: 0.252px;
+    margin-top: 10px;
+    margin-bottom: 17px;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.btn-secondary {
+    color: rgba(224, 44, 109, 0.87);
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 700;
+    background: transparent;
+    border: none;
+}
+
+.btn-div {
+    text-align: right;
+    margin-top: 50px;
+}
+
+
+/*---------featured products---------*/
+.featured-products {
+    display: flex;
+    align-items: center;
+    padding: 0 165px;
+    margin: 100px auto 0;
+    max-width: 1440px;
+}
+
+.featured-content {
+    margin-left: 96px;
+}
+
+.featured-title {
+    color: #0A0826;
+    font-size: 38px;
+    font-weight: 700;
+    line-height: 60px;
+    margin-bottom: 16px;
+}
+
+.featured-description {
+    color: #6C6C6C;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 28px;
+    margin-bottom: 16px;
+}
+
+.btn {
+    border-radius: 0;
+}
+
+/*--------footer style---------*/
+
+.footer {
+    text-align: center;
+    padding: 50px 0;
+    background-color: #0A0826;
+    margin-top: 100px;
+}
+
+.footer-title {
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 3px;
+}
+
+.copyright,
+.footer-desc {
+    color: #D9DBE1;
+    font-family: Manrope;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px;
+    margin-bottom: 3px;
+}
+.fa-brands{
+    color: white;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    margin-right: 16px;
+    margin-top: 14px;
+    border-radius: 50%;
+    background-color: #181640;
+    text-align: center;
+}
+
+/*----------responsive design-----------*/
+
+/*-----------mobile device----------------*/
+@media screen and (max-width:576px) {
+    header {
+        flex-direction: column;
+    }
+
+    nav {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .banner {
+        flex-direction: column-reverse;
+        padding: 0 20px;
+    }
+
+    .banner-content {
+        text-align: center;
+        margin: 0 auto;
+    }
+
+    .sponsor-container {
+        flex-wrap: wrap;
+    }
+
+    .grid-container {
+        grid-template-columns: 1fr;
+    }
+
+    .popular-products {
+        padding: 0 30px;
+    }
+
+    .popular-title {
+        text-align: center;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    .banner-img,
+    .featured-img {
+        width: 100%;
+    }
+
+    .image {
+        width: 100%;
+    }
+
+    .featured-products {
+        flex-direction: column-reverse;
+        padding: 0 30px;
+        text-align: center;
+    }
+
+    .gear-img {
+        width: 100%;
+    }
+
+    .featured-content {
+        margin-left: 0;
+    }
+    .btn{
+        margin-bottom: 30px;
+    }
+    .footer{
+        margin-top: 30px;
+    }
+}
